@@ -831,7 +831,7 @@ case 'addnewnote_assisted':
 	<?php
 	echo PGV_JS_END;
 	?>
-	<div class="center font14" style="width:98%;">
+	<div class="center font14" style="width:100%;">
 		<b><?php echo $pgv_lang['create_shared_note']." using Assistant."; $tabkey = 1; ?></b>
 		<form method="post" action="edit_interface.php" onsubmit="return check_form(this);">
 			<input type="hidden" name="action" value="addnoteaction" />
@@ -2567,9 +2567,8 @@ if ($success && $EDIT_AUTOCLOSE && !PGV_DEBUG) {
 }
 
 // Decide whether to print footer or not ===========================================
-if ($action == 'addmedia_links') {
+if ($action == 'addmedia_links' || $action == 'addnewnote_assisted' ) {
 	// Do not print footer.
-	echo "<br />";
 	echo "<div class=\"center\"><a href=\"javascript:;\" onclick=\"edit_close('{$link}');\">".$pgv_lang["close_window"]."</a></div><br />\n";
 }else{
 	echo "<div class=\"center\"><a href=\"javascript:;\" onclick=\"edit_close('{$link}');\">".$pgv_lang["close_window"]."</a></div><br />\n";
