@@ -33,7 +33,7 @@ div#scrollbar, div#scrollbar2 {
 /* below in external file */
 div#wn	{ 
     position:relative; 
-    width:940px; height:200px; 
+    width:812px; height:200px; 
     overflow:hidden;	
 	}
 	
